--- a/frontend/package.json
+++ b/frontend/package.json
@@ -44,6 +44,10 @@
   "devDependencies": {
     "autoprefixer": "^10.4.8",
     "postcss": "^8.4.16",
-    "tailwindcss": "^3.1.8"
+    "tailwindcss": "^3.1.8",
+    "proxy": "http://localhost:3000"
   }
+
+  
+
 }
